# design_patterns

./: .gitignore  CMakeLists.txt
Lynx_Pardinus_lib/: CMakeLists.txt
Lynx_Pardinus_lib/include/: Lynx_Pardinus.h  build_opts_Lynx_Pardinus.h
Lynx_Pardinus_lib/src/: Lynx_Pardinus.cpp
cat_felis/: CMakeLists.txt
cat_felis/include/: build_opts_cats_felis.h  felis.h
cat_felis/src/: felis.cpp
cats_color/: textcolor.h
cats_domestic_lib/: CMakeLists.txt
cats_domestic_lib/include/: build_opts_cats_domestic.h  domestic_cat.h
cats_domestic_lib/src/: domestic_cat.cpp
cats_exe/: CMakeLists.txt  cat_factory.cpp  cat_factory.h  main.cpp  obsolete_code.cpp
cats_felis_catus_lib/: CMakeLists.txt
cats_felis_catus_lib/include/: build_opts_cats_felis.h  felis_catus_cat.h
cats_felis_catus_lib/src/: felis_catus_cat.cpp
cats_herpailurus_yagouaroundi_lib/: CMakeLists.txt
cats_herpailurus_yagouaroundi_lib/include/: build_opts_herpailus.h  herpailurus_yagouaroundi.h
cats_herpailurus_yagouaroundi_lib/src/: herpailurus_yagouaroundi.cpp
cats_lib/: CMakeLists.txt
cats_lib/include/: build_opts_cl.h  feline.h  lion.h
cats_lib/src/: lion.cpp
cats_lion_lib/: CMakeLists.txt
cats_lion_lib/include/: build_opts_lion.h  lion.h
cats_lion_lib/src/: lion.cpp
cats_puma_concolor_lib/: CMakeLists.txt
cats_puma_concolor_lib/include/: build_opts_cats_concolor.h  puma_concolor.h
cats_puma_concolor_lib/src/: puma_concolor.cpp
cats_serval_lib/: CMakeLists.txt
cats_serval_lib/include/: build_opts_cats_serval.h  serval_cat.h
cats_serval_lib/src/: serval_cat.cpp
data/: felines.ini
feline_catopuma_temminckii_lib/: CMakeLists.txt
feline_catopuma_temminckii_lib/include/: build_opts_catopuma_temminckii.h  catopuma_temminckii.h
feline_catopuma_temminckii_lib/src/: catopuma_temminckii.cpp
include/: Geometry.h  Resource.h  UI.h  UIDlg.h  appliance.h  coffee.h  coffee_factory.h  drink_factory.h  hot_drink.h  hot_drink_factory.h  resource.h  stdafx.h  tea.h  tea_factory.h
src/: UI.APS  UI.cpp  UI.rc  UIDlg.cpp  appliance.cpp  coffee.cpp  coffee_factory.cpp  drink_factory.cpp  main.cpp  resource.cpp  stdafx.cpp  tea.cpp  tea_factory.cpp
