CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT (feline)

ADD_SUBDIRECTORY(cats_exe)
ADD_SUBDIRECTORY(cats_lib)
ADD_SUBDIRECTORY(cats_domestic_lib)
ADD_SUBDIRECTORY(cat_felis)
ADD_SUBDIRECTORY(cats_felis_catus_lib)
ADD_SUBDIRECTORY(cats_herpailurus_yagouaroundi_lib)
ADD_SUBDIRECTORY(cats_lion_lib)
ADD_SUBDIRECTORY(cats_puma_concolor_lib)
ADD_SUBDIRECTORY(cats_serval_lib)
ADD_SUBDIRECTORY(feline_catopuma_temminckii_lib)
ADD_SUBDIRECTORY(Lynx_Pardinus_lib)